force-app/main/default/objects/animalos__Job_Bundle__c/animalos__Job_Bundle__c.object-meta.xml
<CustomObject>
    <label>Job Bundle</label>
    <nameField>
        <displayFormat>JB{00000}</displayFormat>
        <label>Job Bundle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>