force-app/main/default/objects/animalos__Job_Bundle__c/fields/animalos__End_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>