force-app/main/default/objects/animalos__Job_Bundle__c/fields/animalos__Outcome__c.field-meta.xml
<CustomField>
    <fullName>animalos__Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prosecution</fullName>
            </value>
            <value>
                <fullName>Enforcement Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>